##Text encoding: utf-8

2013-04-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: start work on children aligment.
	* libs/gcp/reaction-separator.h: add missing declaration.

2013-04-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add new files.
	* libs/gcp/application.cc: new ReactionSeparator class.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-separator.cc: ditto.
	* libs/gcp/reaction-separator.h: ditto.

2013-04-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add properties editor.
	* libs/gcp/reaction-arrow.h: ditto.
	* ui/paint/Makefile.am: install the new ui file.
	* ui/paint/reaction-arrow-prop.ui: populate.

2013-04-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add more properties.
	* libs/gcp/reaction-arrow.h: ditto.

2013-04-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add a PositionChildren() method.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: initialize spin buttons.
	* libs/gcp/reaction-prop-dlg.h: ditto.
	* libs/gcp/reaction-prop.cc: don't save step, line or rank when less than 1.

2013-04-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: add monoisotopicmass function.
	* gnumeric/plugin.xml.in.in: ditto.
	* ui/calc/gchemcalc.ui: make the masses selectable.

2013-03-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fix crash when loading some molecules.
	* libs/gcp/reaction-arrow.cc: start work on multi attachments support.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* ui/paint/arrow-object.ui: ditto.
	* ui/paint/reaction-arrow-prop.ui: ditto.

2013-03-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: don't crash when deleting a cyclic bond.
	* libs/gcp/reaction-arrow.cc: start work for supporting several attachments
	to the same arrow.